--- a/css/layout/_global.scss
+++ b/css/layout/_global.scss
@@ -3,6 +3,10 @@ img {
     width: 100%;
 }
 
+a {
+    text-decoration: none;
+}
+
 ul {
     list-style-type: none;
     margin: 0;
@@ -68,7 +72,7 @@ ul {
     gap: $gap;
 }
 
-.v-spacing {
+.x-spacing {
     gap: $gap;
 }
 
