--- a/css/pages/_home.scss
+++ b/css/pages/_home.scss
@@ -1,15 +1,77 @@
 .homepage {
-    h1, h2 {
+    h1, h2, h3, h4 {
         margin: 0;
     }
 }
+
 .div-1 {
     padding: $gap 0;
     border-bottom: 2px solid $darker;
+    h1, h3 {
+        color: #fff;
+        @include barlow-800;
+    }
+}
+
+.article-overlay {
+    position: relative;
+    @include br10;
+    &::after {
+        content: "";
+        width: 100%;
+        height: 100%;
+        display: block;
+        background: linear-gradient(180deg, rgba(0,0,36,0) 0%, rgba(112,1,1,0) 0%, rgba(0,0,0,1) 100%);
+    }
+}
+
+.content-overlay {
+    position: absolute;
+    top: 50%;
+    padding: $gap;
+}
+
+.article1 {
+    background: url(../../img/trending/trending_top02.jpg) center/cover;
+    height: 660px;
+}
+
+.article2 {
+    background: url(../../img/trending/trending_top3.jpg) center/cover;
+    height: calc(50% - ($gap/2));
+    margin-bottom: $gap;
+}
+
+.article3 {
+    background: url(../../img/trending/trending_top4.jpg) center/cover;
+    height: calc(50% - ($gap/2));
 }
 
 .whats-new {
     padding: 50px 0 20px;
+    .wn-articles {
+        @include br10;
+        padding: 30px 20px 10px;
+    }
+}
+
+.fans {
+    padding: 30px 20px;
+    margin-bottom: 45px;
+    @include br10;
+    .grid-1-2 {
+        padding: 10px 13px 15px;
+        margin-bottom: 5px;
+        border: 1px solid $gray;
+        @include br10;
+    }
+    p {
+        margin: 0 0 0 15px;
+        align-self: center;
+        span {
+            display: block;
+        }
+    }
 }
 
 .most-popular {
