--- a/css/abstracts/_variables.scss
+++ b/css/abstracts/_variables.scss
@@ -2,6 +2,10 @@
 $gray: #f4f4f4;
 $darker: #f1f1f1;
 $red: #ff2143;
+$green: #13c600;
+$blue: #0077b5;
+$purple: #8a3ab9;
+$date: #707b8e;
 
 // spacing
 $gap: 2rem;
