--- a/css/pages/_home.scss
+++ b/css/pages/_home.scss
@@ -4,17 +4,82 @@
     }
 }
 
+// première div
+
 .div-1 {
     padding: $gap 0;
     border-bottom: 2px solid $darker;
-    h1, h3 {
-        color: #fff;
-        @include barlow-800;
-    }
 }
+
+// styles des catégories
+
+.category {
+    text-transform: uppercase;
+    @include br10;
+    font-size: 10px;
+}
+
+.blue {
+    background-color: $blue;
+    color: #fff;
+    padding: 7px 14px;
+}
+
+.green {
+    background-color: $green;
+    color: #fff;
+    padding: 7px 14px;
+}
+
+.red {
+    background-color: $red;
+    color: #fff;
+    padding: 7px 14px;
+}
+
+.purple {
+    background-color: $purple;
+    color: #fff;
+    padding: 7px 14px;
+}
+
+.blue-text {
+    color: $blue;
+    font-size: 11px;
+    font-weight: 700;
+}
+
+.green-text {
+    color: $green;
+    font-size: 11px;
+    font-weight: 700;
+}
+
+.red-text {
+    color: $red;
+    font-size: 11px;
+    font-weight: 700;
+}
+
+// style des dates
+
+.date {
+    font-size: 12px;
+    color: $date;
+}
+
+// styles des articles avec images en background
 
 .article-overlay {
     position: relative;
+    h1, h3 {
+        color: #fff;
+        @include barlow-800;
+        @include hover-red;
+    }
+    h1 {
+        font-size: 40px;
+    }
     @include br10;
     &::after {
         content: "";
@@ -23,12 +88,21 @@
         display: block;
         background: linear-gradient(180deg, rgba(0,0,36,0) 0%, rgba(112,1,1,0) 0%, rgba(0,0,0,1) 100%);
     }
+    .date {
+        color: $gray;
+    }
 }
 
 .content-overlay {
     position: absolute;
     top: 50%;
-    padding: $gap;
+    padding: 0 0 0 $gap;
+    bottom: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: space-around;
+    width: 80%;
 }
 
 .article1 {
@@ -47,11 +121,113 @@
     height: calc(50% - ($gap/2));
 }
 
+.article4 {
+    background: url(../../img/gallery/most_recent.png) center/cover;
+    height: 240px;
+    @include br10;
+}
+
+.article5 {
+    background: url(../../img/gallery/tranding2.png) center/cover;
+    height: 290px;
+    width: 100%;
+    position: relative;
+    .content {
+        position: absolute;
+        top: 50%;
+        padding: 20px 20px 10px 10px;
+        background-color: #fff;
+        bottom: 0;
+        width: 70%;
+        border-radius: 0 7px 0 0;
+    }
+}
+
+.article6 {
+    background: url(../../img/gallery/tranding1.png) center/cover;
+    height: 290px;
+    width: 100%;
+    position: relative;
+    .content {
+        position: absolute;
+        top: 50%;
+        padding: 20px 20px 10px 10px;
+        background-color: #fff;
+        bottom: 0;
+        width: 70%;
+        border-radius: 0 7px 0 0;
+    }
+}
+
+.article7 {
+    background: url(../../img/gallery/tranding2.png) center/cover;
+    height: 290px;
+    width: 100%;
+    position: relative;
+    .content {
+        position: absolute;
+        top: 50%;
+        padding: 20px 20px 10px 10px;
+        background-color: #fff;
+        bottom: 0;
+        width: 70%;
+        border-radius: 0 7px 0 0;
+    }
+}
+
+// What's new
+
 .whats-new {
     padding: 50px 0 20px;
+    a {
+        color: #000;
+        @include hover-red;
+    }
+    h2 {
+        font-size: 40px;font-weight: 700;
+    }
     .wn-articles {
         @include br10;
         padding: 30px 20px 10px;
+    }
+}
+
+.whatsnew-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 31px;
+    li {
+        margin: 0 10px;
+        font-weight: 500;
+        &:first-of-type a {
+            color: $red;
+        }
+    }
+    .category {
+        @include mb15;
+    }
+}
+
+.secretart-article {
+   margin: 0 15px 40px;
+   img {
+    @include mb15;
+   }
+   h3 {
+    @include mb15;
+   } 
+}
+
+.small-articles {
+    .content {
+        padding-left: 18px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+    }
+    article {
+        @include mb15;
     }
 }
 
@@ -74,16 +250,108 @@
     }
 }
 
+.fans-sub {
+  gap: 5px; 
+}
+
+.most-recent {
+    padding: 30px 10px;
+    @include br10;
+    h3 {
+        @include mb15;
+        font-weight: 500;
+        @include hover-red;
+    }
+    article {
+        @include mb15;
+    }
+    .content {
+        padding-left: 18px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+    }
+    a {
+        font-weight: 500;
+        @include hover-red;
+    }
+}
+
+// Most popular
+
 .most-popular {
     padding: 50px 0 30px;
 }
 
+.most-popular-articles {
+    padding: 30px 22px 19px 23px;
+    @include br10;
+    h3 {
+        @include mb30;
+        font-weight: 700;
+        font-family: $barlow;
+    }
+    img {
+        @include mb30;
+    }
+    .content {
+        display: flex;
+        flex-direction: column;
+    }
+    a {
+        @include mb30;
+        color: #000;
+        font-weight: 700;
+        padding-right: 20px;
+        line-height: 1.3;
+        font-family: $barlow;
+        @include hover-red;
+    }
+}
+
+// Trending news
+
 .trending-news {
     padding: 80px 0;
+    h2, h3 {
+        font-family: $barlow;
+    }
+    h2 {
+        font-weight: 700;
+        font-size: 40px;
+        margin-bottom: 30px;
+    }
+    article {
+        @include br10;
+    }
+    h3 {
+        text-transform: capitalize;
+        @include mb30;
+    }
+    a {
+        color: #000;
+        @include hover-red;
+    }
+    .content {
+        // position: relative;
+    }
+    i {
+        position: absolute;
+        bottom: 10px;
+        right: 20px;
+        font-size: 30px;
+        color: $date;
+    }
 }
+
+// Pub
 
 .pub {
     padding: 90px 0;
+    img {
+        width: 80%;
+        margin: 0 auto;
+    }
 }
 
 [src="img/gallery/body_card1.png"] {
@@ -94,5 +362,14 @@
     height: 100%;
 }
 
+.overflow-hidden {
+    overflow: hidden;
+    @include br10;
+}
 
-
+[src="img/gallery/whats_news_details1.png"] {
+    transition: all .3s;
+    &:hover {
+        transform: scale(1.1);
+    }
+}
