--- a/css/layout/_global.scss
+++ b/css/layout/_global.scss
@@ -80,3 +80,17 @@ ul {
     gap: $gap;
 }
 
+// mobile
+
+@media screen and (max-width: $mobile) {
+    .container {
+        width: 510px;
+    }
+    .p-none {
+        display: none;
+    }
+    .grid-4-1 {
+        display: flex;
+        justify-content: space-between;
+    }
+}
