--- a/css/layout/_global.scss
+++ b/css/layout/_global.scss
@@ -50,6 +50,11 @@ ul {
     grid-template-columns: 1fr 4fr;
 }
 
+.grid-1-4-flex {
+    display: grid;
+    grid-template-columns: 1fr 4fr;
+}
+
 .grid-2-1 {
     display: grid;
     grid-template-columns: 2fr 1fr;
@@ -95,5 +100,17 @@ ul {
     .grid-4-1 {
         display: flex;
         justify-content: space-between;
+    }
+    .grid-2-1 {
+        display: flex;
+        flex-direction: column;
+    }
+    .grid-1-1 {
+        display: flex;
+        flex-direction: column;
+    }
+    .grid-1-4-flex {
+        display: flex;
+        flex-direction: column;
     }
 }
