--- a/css/styles.scss
+++ b/css/styles.scss
@@ -9,6 +9,7 @@
 @import 'layout/header';
 @import 'layout/navigation';
 
+@import 'pages/category';
+@import 'pages/contact';
 @import 'pages/home';
 @import 'pages/latest-news';
-@import 'pages/category';
