--- a/css/pages/_about.scss
+++ b/css/pages/_about.scss
@@ -1,20 +1,187 @@
+// Our Mission etc.
+
 .mission-vision {
     padding: 120px 0 100px;
+    p {
+        font-family: "Roboto",sans-serif;
+        color: #506172;
+        font-size: 16px;
+        line-height: 30px;
+        margin-bottom: 15px;
+    }
+    h4 {
+        font-size: 30px;
+        font-family: "Barlow",sans-serif;
+        font-weight: 700;
+        margin: 0 0 30px;
+        color: #000a2d;
+        display: inline-block;
+        padding-left: 68px;
+        position: relative;
+        &::before {
+            position: absolute;
+            content: "";
+            width: 54px;
+            height: 2px;
+            background: #eb566c;
+            left: 0px;
+            top: 50%;
+            transform: translateY(-50%);
+        }
+    }
 }
+
+// Our best services
 
 .services {
     position: relative;
+    line-height: 30px;
+    h2 {
+        font-size: 50px;
+        font-weight: 800;
+        margin: 0 0 8px;
+        text-transform: capitalize;
+        margin-bottom: 50px;
+    }
+    p {
+        margin-bottom: 15px;
+        font-size: 20px;
+        font-family: $barlow;
+        &:nth-child(2n) {
+            margin-bottom: 65px;
+            font-size: 15px;
+            font-family: $roboto;
+        }
+    }
 }
 
 .services-content {
-    padding: 100px 0 100px;
     position: absolute;
-    top: 0;
+    top: 50%;
     left: 50%;
-    transform: translateX(-50%);
+    transform: translate(-50%, -50%);
     color: #fff;
+    gap: $gap;
 }
+
+.services-img,
+.services-txt {
+    padding: 0 15px;
+}
+
+.services-txt {
+    align-self: center;
+}
+
+// Our team members
 
 .team {
     padding: 120px 0 100px;
+    h2 {
+        font-size: 50px;
+        font-weight: 800;
+        margin: 0 0 8px;
+        text-transform: capitalize;
+        margin-bottom: 50px;
+    }
+}
+
+.tm-txt {
+    padding: 20px 20px 20px 50px;
+    a {
+        color: #161e46;
+        font-weight: 700;
+        font-size: 25px;
+        display: block;
+        margin-bottom: 8px;
+    }
+}
+
+.tm-img {
+    overflow: hidden;
+    img {
+        transition: transform .5s ease-in-out;
+    }
+}
+
+.tm:hover img {
+    transform: scale(1.05);
+}
+
+// Global
+
+.button {
+    padding: 20px 40px;
+    background-color: $red;
+    color: #fff;
+    text-transform: uppercase;
+    position: relative;
+    color: #fff !important;
+    font-weight: 500;
+    font-size: 14px;
+    span {
+        position: relative;
+        z-index: 10;
+    }
+    &::after {
+        content: "";
+        position: absolute;
+        left: 0;
+        top: 0;
+        transition: right 2s;
+        width: 100%;
+        height: 100%;
+        background: #ca292e;
+        transition: transform 0.5s;
+        transform: scaleX(0);
+        // z-index: 0;
+        transform-origin: 0 0;
+    }
+    &:hover {
+        &::after {
+            transform: scaleX(1);
+        }
+    }
+}
+
+.under-title {
+    text-transform: capitalize;
+    color: $red;
+    position: relative;
+    margin-left: 50px;
+    font-size: 14px;
+    font-family: $barlow;
+    &::before {
+        position: absolute;
+        content: "";
+        width: 35px;
+        height: 2px;
+        left: -47px;
+        top: 50%;
+        transform: translateY(-50%);
+        background: $red;
+    }
+}
+
+.special-title {
+    font-size: 18px;
+    font-family: "Barlow",sans-serif;
+    font-weight: 500;
+    margin-bottom: 17px;
+    text-transform: uppercase;
+    color: $red;
+    display: inline-block;
+    position: relative;
+    padding-left: 68px;
+    &::before {
+        position: absolute;
+        content: "";
+        width: 54px;
+        height: 2px;
+        background: $red;
+        top: 0;
+        left: 0px;
+        top: 50%;
+        transform: translateY(-50%);
+    }
 }
